--- a/signup.html
+++ b/signup.html
@@ -21,14 +21,14 @@
                 <input type="checkbox" id="userType">
                 <span class="slider"></span>
               </label>
-              <input class="p-3 mt-1 rounded-xl border color-black outline-none" type="text" name="" placeholder="Email" required="">
-              <input class="p-3 mt-1 rounded-xl border color-black outline-none" type="text" name="" placeholder="Userid" required="">
+              <input class="p-3 mt-1 rounded-xl border color-black outline-none" type="text" name="" placeholder="Email" required="" id="email">
+              <input class="p-3 mt-1 rounded-xl border color-black outline-none" type="text" name="" placeholder="Userid" required="" id="userid">
               <div class="relative p-2 rounded-xl border" id="password">
-                <input class="p-2 rounded-xl w-full outline-none" type="password" name="password" placeholder="Password" required="">
+                <input class="p-2 rounded-xl w-full outline-none" type="password" name="password" placeholder="Password" required="" id="password">
 				<image src="eye.svg">
               </div>
 			  <div class="relative p-2 rounded-xl border" id="password">
-                <input class="p-2 rounded-xl w-full outline-none" type="password" name="password" placeholder="Password" required="">
+                <input class="p-2 rounded-xl w-full outline-none" type="password" name="password" placeholder="Password" required="" id="cpassword">
 				<image src="eye.svg">
               </div>
               <button id="spin" class="bg-[#024E1B] rounded-xl text-white py-2 hover:scale-105 duration-300">
@@ -41,11 +41,6 @@
               <p class="text-center text-sm">OR</p>
               <hr class="border-white-400">
             </div>
-      
-            <button class="bg-white border py-2 w-full rounded-xl mt-5 flex justify-center items-center text-sm hover:scale-105 duration-300 text-black">
-              <a href="invitation.html">Want to Sell, Click here</a>
-            </button>
-            
             <div class="mt-3 text-xs flex justify-between items-center">
               <p>Have an account?</p>
               <button class="py-2 px-5 bg-white border rounded-xl hover:scale-110 duration-300 text-black"><a href="index.html">Longin</a></button>
@@ -59,6 +54,6 @@
         </div>
       </section>
         </div>
-        <br><br>
 </body>
+
 </html>
