--- a/signup.html
+++ b/signup.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://cdn.tailwindcss.com"></script>
+    <script type="module" src="firebase.js"></script>
     <link rel="stylesheet" type="text/css" href="tailwind.css">
     <title>Sign Up</title>
 </head>
@@ -21,8 +22,8 @@
                 <input type="checkbox" id="userType">
                 <span class="slider"></span>
               </label>
-              <input class="p-3 mt-1 rounded-xl border color-black outline-none" type="text" name="" placeholder="Email" required="" id="email">
-              <input class="p-3 mt-1 rounded-xl border color-black outline-none" type="text" name="" placeholder="Userid" required="" id="userid">
+              <input class="p-3 mt-1 rounded-xl border color-black outline-none" type="text" placeholder="Email" required="" id="email">
+              <input class="p-3 mt-1 rounded-xl border color-black outline-none" type="text" placeholder="Fullname" required="" id="fullname">
               <div class="relative p-2 rounded-xl border" id="password">
                 <input class="p-2 rounded-xl w-full outline-none" type="password" name="password" placeholder="Password" required="" id="password">
 				<image src="eye.svg">
