--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
     <section class="min-h-screen flex items-center justify-center">
         <!-- login container -->
-        <div id="login-box" class="flex rounded-2xl shadow-lg max-w-3xl p-5 items-center">
+        <div id="login-box" class="flex rounded-xl shadow-lg max-w-3xl p-5 items-center">
           <!-- form -->
           <div class="px-8 md:px-16">
             <h2 class="font-bold text-2xl">Welcome to Agriforia</h2>
