--- a/signup.html
+++ b/signup.html
@@ -23,13 +23,13 @@
                 <span class="slider"></span>
               </label>
               <input class="p-3 mt-1 rounded-xl border color-black outline-none" type="text" placeholder="Email" required="" id="email">
-              <input class="p-3 mt-1 rounded-xl border color-black outline-none" type="text" placeholder="Fullname" required="" id="fullname">
+              <input class="p-3 mt-1 rounded-xl border color-black outline-none" type="text" placeholder="Name" required="" id="fullname">
               <div class="relative p-2 rounded-xl border" id="password">
-                <input class="p-2 rounded-xl w-full outline-none" type="password" name="password" placeholder="Password" required="" id="mpassword">
+                <input class="p-2 rounded-xl w-full outline-none" type="password" name="password" placeholder=" Create Password" required="" id="mpassword">
 				<image src="images/eye.svg" id="eye1">
               </div>
 			  <div class="relative p-2 rounded-xl border" id="password">
-                <input class="p-2 rounded-xl w-full outline-none" type="password" name="password" placeholder="Password" required="" id="cpassword">
+                <input class="p-2 rounded-xl w-full outline-none" type="password" name="password" placeholder="Confirm Password" required="" id="cpassword">
 				<image src="images/eye.svg" id="eye2">
               </div>
               <button id="spin1" class="bg-[#024E1B] rounded-xl text-white py-2 hover:scale-105 duration-300">
