--- a/signup.html
+++ b/signup.html
@@ -14,7 +14,7 @@
         <div id="login-box" class="flex rounded-2xl shadow-lg max-w-3xl p-5 items-center">
           <!-- form -->
           <div class="md:w-1/2 px-8 md:px-16">
-            <h2 class="font-bold text-3xl">Join, Agriforia</h2><br>
+            <h2 class="font-bold text-3xl">Join Agriforia</h2><br>
             <form action="" class="flex flex-col gap-4 text-black">
               <label class="switch">
                 <div id="buyer">Buyer</div>
